2007-09-15  Chris Morley

	* src/mol.cpp(GetTotalSpinMultiplicity): now returns correct value
	(1 for normal molecule). Improve documentation. Fixes bug
	#1793980.
	
	* include/openbabel/atom.h, mol.h: improve documentation to emphasize
	OBAtom::GetSpinMultiplicity returns 0 for normal atoms.
	
	* tools/nbabel.cpp: alternative commandline, with explicit -O option
	for output file, less flexible option placing.
	
2007-09-10  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/mol.cpp (Separate): More defensive programming to prevent
	crashing with incomplete OBChiralData.

	* src/formats/cansmilesformat.cpp: Add support for new OBPairData
	"canonical order" -- space terminated string of canonical atom
	labels.

	* tools/obfragment.cpp: New version which outputs XYZ files with
	atoms in canonical order matching the SMILES.

2007-09-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefield.cpp: Small improvements to LineSearch and
	ConjugateGradientsTakeNSteps for performance improvement. In
	particular, reset the CG direction periodically and only print
	output every 10 steps.

	* src/forcefields/forcefieldghemical.cpp: Smarter VDW calculation
	-- minimize the number of multiplies. Not much of an improvement,
	unfortunately.

2007-09-04  Chris Morley

	* include/inchi_api.h, windows-vc2005/libinchi.dll,
	windows-vc2005/libinchi.lib: updated to v1.02 beta
	
	* src/formats/inchiformat.cpp: added option to output InChIKey.
	Windows only until the appropriate files for UNIX are installed.

2007-09-03  Chris Morley

	* include/zlib.h, iconv.h, zconf.h: Added.
	Needed for Windows build. I hope they do not interfere 
	with unix builds
	
	* src/formats/xml/cmlreactformat.cpp: Added
	
	* src/formats/pngformat.cpp: remove include to insizes.h
	
	Update Windows project files
	* windows-vc2005/OBComLn/OBComLn.vcproj
	* windows-vc2005/openbabel.sln
	* windows-vc2005/OpenBabelDLL/OpenBabelDLL.vcproj

2007-09-03  Chris Morley
